# AEDproject

./: .gitignore  CMakeLists.txt  README.md  a.out  app  includes.h  main.c  run.py  run.sh
functions/: aplicacoes.c  deleteFuncts.c  editFuncts.c  equipamento.c  functions.h  global.c  insertFuncs.c  placas.c
structures/: .equipamentos.h.kate-swp  equipamentos.h  structers.h
ui/: colors.h  main.h  menu.c  menu.h  ui.c  ui.h
ui/menu/: menu.c  menu.h
ui/pages/: pages.c  pages.h
ui/table/: table.c  table.h
ui/utilities/: chars.h  colors.h  ui.c  ui.h
